# pkgconf

./: .gitattributes  .gitignore  .mailmap  .travis.yml  .woodpecker.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Makefile  Makefile.am  Makefile.in  Makefile.lite  NEWS  README  README.md  argvsplit.c  autogen.sh  bsdstubs.c  bsdstubs.h  buildsys.mk.in  cache.c  codecov.yml  configure.ac  dependency.c  fileio.c  fragment.c  getopt_long.c  getopt_long.h  iter.h  libpkgconf.pc.in  main.c  meson.build  meson_options.txt  parse.c  pkg.c  pkg.h  pkg.m4  pkgconf.1  (+7 more)
.builds/: autoconf-alpine-edge.yml  autoconf-fedora-rawhide.yml  autoconf-freebsd-latest.yml  cmake-alpine-edge.yml  meson-alpine-edge.yml  meson-fedora-rawhide.yml  meson-freebsd-latest.yml
.github/: FUNDING.yml
.github/workflows/: release-tarballs.yml  test.yml
cli/: core.c  core.h  getopt_long.c  main.c  renderer-msvc.c
cli/bomtool/: main.c
cli/pccritic/: critic.c  critic.h  main.c
cli/spdxtool/: core.c  core.h  generate.c  main.c  serialize.c  serialize.h  simplelicensing.c  simplelicensing.h  software.c  software.h  util.c  util.h
cmake/: pkgconf-config-version.cmake.in  pkgconf-config.cmake.in  pkgconf-generate-pc.cmake
cmake/tests/basic/: CMakeLists.txt  consumer.c
cmake/tests/generate/: CMakeLists.txt  sample.c
cmake/tests/generate-fail/: CMakeLists.txt
cmake/tests/required-fail/: CMakeLists.txt
cmake/tests/zlib/: CMakeLists.txt  consumer.c
doc/: conf.py  extract.py  index.rst  libpkgconf-client.rst  libpkgconf-dependency.rst  libpkgconf-fragment.rst  libpkgconf-path.rst  libpkgconf-pkg.rst  libpkgconf-queue.rst  libpkgconf-tuple.rst  libpkgconf.rst
fuzzer/: meson.build  parser-fuzzer.c  spdxtool-fuzzer.c
libpkgconf/: CMakeLists.txt  argvsplit.c  audit.c  bsdstubs.c  bsdstubs.h  buffer.c  bufferset.c  bytecode.c  cache.c  client.c  config.h.cmake.in  config.h.meson  dependency.c  fileio.c  fragment.c  index.c  iter.h  libpkgconf-api.h  libpkgconf.h  license.c  meson.build  output.c  parser.c  path.c  personality.c  pkg.c  queue.c  stdinc.h  tuple.c  variable.c  version.c  win-dirent.h
libpkgconf/tests/: argvsplit-test.c
m4/: buildsys.m4
man/: bomtool.1  pc.5  pccritic.1  pkg.m4.7  pkgconf-personality.5  pkgconf.1  spdxtool.1
python/: build.py  meson.build
python/pypkgconf/: __init__.py  callbacks.py  clilike.py  constants.py  logger.py  meson.build  util.py
python/tests/: conftest.py  test_basic.py  test_builtins.py  test_conflicts.py  test_framework.py  test_parser.py  test_provides.py  test_regress.py  test_requires.py  test_sysroot.py  test_version.py
scripts/: install_deps.sh  makerelease.sh
t/basic/: utf8-pkg-config-path.test
t/cli/: define-prefix-boundary-sibling.test  define-prefix-boundary.test  define-prefix-plain.test  define-prefix-trailing-slash-cflags.test  define-prefix-trailing-slash.test  dump-personality-loaded.test  env-early-trace.test  env-log.test  maximum-traverse-depth-invalid-env.test  maximum-traverse-depth-invalid.test  maximum-traverse-depth-unlimited.test  path.test  single-package-limit.test
t/link-abi/: private-requires-static.test  public-requires.test
t/parser/: escaped-backslashes-in-output.test  fragment-escaped-space-var-cflags.test  fragment-escaped-space-var-libs.test  msvc-fragment-quoting.test  msvc-fragment-render-cflags.test  self-referential-fragment.test  shell-quoted-output.test  spaces-in-paths.test
t/pccritic/: about.test  help.test  min-score-invalid.test  min-score-out-of-range.test  min-score.test  missing-field.test  no-arguments.test  perfect.test  polluted.test  unknown-package.test  version.test
t/personality/: dump-personality.test  pc-path-var.test  pc-system-includedirs.test  pc-system-libdirs.test
t/solver/: private-libs-duplication-digraph.test
t/sysroot/: fdo-sysroot-system-path-filtering.test  fdo-sysroot-variable-not-rewritten.test  windows-drive-path-no-inject.test  windows-sysroot-inject.test  windows-system-libdir-filter.test  windows-top-builddir.test
tests/: Kyuafile  Kyuafile.in  basic.sh  builtins.sh  conflicts.sh  framework.sh  meson.build  parser.sh  provides.sh  regress.sh  requires.sh  run.sh  run.sh.in  sysroot.sh  test-runner.c  test_env.sh.in  win-shim.h
tests/api/: test-api.h  test-audit.c  test-buffer.c  test-bytecode.c  test-client.c  test-dependency.c  test-fileio.c  test-fragment.c  test-license.c  test-oom-spdxtool.c  test-path-utils.c  test-queue.c  test-serialize.c  test-tuple.c  test-variable.c
tests/lib-pccritic/: nodesc.pc  perfect.pc  polluted.pc
tests/lib-relocatable/abs-boundary/lib/pkgconfig/: boundary.pc
tests/lib-relocatable/plain-prefix/lib/pkgconfig/: plain.pc
tests/lib-relocatable/trailing-prefix/lib/pkgconfig/: trailing.pc
tests/lib-sbom/: special.pc  test1.pc
tests/lib-sbom-files/: agent_name.json  agent_name_space.json  basic-spdx-base-id.json  basic-use-uri.json  basic.json  creation_id.json  define_variable.json  define_variable_with_dependency.json  meta_package-use-uri-spdx-base-id.json  meta_package.json  multi_copyright.json  multiple_packages.json  nolicense.json  private_dependency.json  special.json  with_dependency.json
tests/lib1/: argv-parse-2.pc  argv-parse-3.pc  argv-parse.pc  bar.pc  baz.pc  cflags-libs-only.pc  circular-1.pc  circular-2.pc  circular-3.pc  comments-in-fields.pc  conflicts.pc  depgraph-break.pc  dos-lineendings.pc  foo.pc  fragment-escaped-space-var.pc  fragment-escaping-1.pc  fragment-quoting-4.pc  fragment-quoting-6.pc  fragment-quoting-7.pc  framework-1.pc  framework-2.pc  framework-3.pc  intermediary-1.pc  intermediary-2.pc  maxpkg-first.pc  maxpkg-second.pc  missing-require.pc  multiline.pc  no-trailing-newline.pc  nocflag.pc  nolib.pc  omg-uninstalled.pc  prefix-foo1.pc  prefix-foo2.pc  private-libs-duplication.pc  provides.pc  quotes.pc  self-referential-fragment.pc  static-archive-libs.pc  static-libs.pc  (+7 more)
tests/lib2/: foo.pc
tests/personality-data/: sysrooted.personality
