AC_PREREQ([2.68])
AC_INIT([pkgconf], [0.1.1], [http://jira.atheme.org/])
AC_CONFIG_SRCDIR([pkg.c])
AC_CONFIG_HEADERS([config.h])
AC_CHECK_FUNCS([getopt_long strlcpy strlcat strndup])

AC_PROG_CPP
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

BUILDSYS_SHARED_LIB
BUILDSYS_PROG_IMPLIB
BUILDSYS_TOUCH_DEPS

AC_CONFIG_FILES([buildsys.mk])
AC_OUTPUT
